# modular-form-activation

./: .cursorrules  .gitignore  README.md  pyproject.toml
jobs/: eta_nanogpt.slurm
scripts/: train_nanogpt_eta.py
src/modular_form_activation/: __init__.py  activations.py  benchmark_mnist.py
