[project]
name = "modular-form-activation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
dependencies = [
    "jax>=0.4.33",
    "jaxtyping>=0.2.34",
    "beartype>=0.18.5",
    "einops>=0.8.0",
    "hypothesis>=6.112.1",
    "jaxlib>=0.4.33",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "fancy-einsum>=0.0.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "plotly>=5.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modular_form_activation"]
