[project]
name = "modular-form-activation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alok Singh", email = "alokbeniwal@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.18",
    "tqdm>=4.67.1",
    "transformers>=4.41",
    "datasets>=3.8",
    "tiktoken>=0.6.0",
    "wandb>=0.16.6",
]

[project.scripts]
modular-form-activation = "modular_form_activation:main"
mnist-benchmark = "modular_form_activation.benchmark_mnist:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
